# holorepo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml
.github/workflows/: bump.yml  create-release.yml  pr-lint-test.yml
src/: lib.rs  main.rs
src/clone/: mod.rs  operations.rs  repository_clone.rs
src/config/: manager.rs  parser.rs
src/new/: mod.rs  project_creation.rs
src/run/: run.rs  runners.rs
src/sync/: synchronization.rs
src/util/: operations.rs  utilities.rs
