[package]
name = "omnirepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "omnirepo"
path = "src/main.rs"

[lib]
name = "omnirepo_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
dirs = "5.0.1"
duct = "0.13.6"
indicatif = { version = "0.17.3", features = ["rayon"] }
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
