[package]
name = "omnirepo"
version = "0.7.0"
edition = "2021"
authors = ["Stefan Vatov"]
license = "MIT"
license-file = "LICENSE"
description = "A command-line tool for managing multiple Git repositories."
repository = "https://github.com/stefan-vatov/omnirepo"
readme = "README.md"
keywords =["repository", "cli", "terminal"]
exclude = ["target", "Cargo.lock"]
categories = ["command-line-utilities"]

[[bin]]
name = "omnirepo"
path = "src/bin/main.rs"

[lib]
name = "omnirepo_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
dirs = "5.0.1"
duct = "0.13.6"
indicatif = { version = "0.17.3", features = ["rayon"] }
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
reqwest = { version = "0.11", features = ["json", "blocking"] }
fern = "0.6.2"
log = "0.4.17"
prettytable-rs = "0.10.0"
once_cell = "1.17.2"
